--- a/src/styles/Beers.css
+++ b/src/styles/Beers.css
@@ -1,3 +1,16 @@
 #beer-card{
+    cursor: pointer;
     max-width: 15rem;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+    transition: box-shadow 0.3s ease-in-out;
+}
+
+#beer-card:hover{
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.8);
+}
+
+#card-imgs{
+    width: 100%;
+    height: 100px;
+    object-fit: scale-down;
 }
